# charms-wallet

./: .gitignore  README.md  api.deploy.sh  deploy-webapp.sh  ecosystem.config.js  fly.toml  package-lock.json  prompts.txt  setup-server.sh  setup.sh
api/: .env.development  Cargo.toml  README.md
api/src/: main.rs
api/src/error/: mod.rs
api/src/handlers/: broadcast.rs  external.rs  health.rs  local.rs  mod.rs  transfer_charms.rs
api/src/handlers/spell/: mod.rs  prove.rs
api/src/handlers/transaction/: broadcast.rs  mod.rs
api/src/handlers/wallet/: balance.rs  create.rs  mod.rs
api/src/models/: mod.rs
api/src/services/: external.rs  health.rs  local.rs  mod.rs  spell.rs  transaction.rs  wallet.rs
nginx/: api.conf  webapp.conf
webapp/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webapp/src/: App.svelte  config.ts
webapp/src/components/: AddressList.svelte  AddressManager.svelte  CharmCard.svelte  ConfirmDialog.svelte  CreateWallet.svelte  Modal.svelte  SendTransaction.svelte  TransferBtcDialog.svelte  TransferCharmDialog.svelte  TransferDialog.svelte  UTXOList.svelte  WalletInfo.svelte
webapp/src/services/: api.ts  charms.ts  charmsTransactionService.ts  index.ts  signTransactionService.ts  transactionBuilder.ts  transfer.ts  transferCharms.ts  utxo.ts
webapp/src/stores/: addresses.ts  charms.ts  navigation.ts  settings.ts  transfer.ts  utxos.ts  wallet.ts
webapp/src/types/: charms.ts  create-hash.d.ts  crypto-js.d.ts  global.d.ts  (+4 more)
zrjj/: README.md  bitcoin.node.js  create-charm.md  execute-charms-locally-3-services.md  prompts.md  prompts.txt  status.md  transfer-charms.txt
zrjj/tools/: generate.py  get_pub_address.py
(+51 files in other folders)
