[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bitcoin = { version = "0.32", features = ["rand-std"] }
bitcoincore-rpc = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2.0.11"
rand = "0.8"
