[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bitcoin = { version = "0.32", features = ["rand-std"] }
bitcoincore-rpc = "0.19.0"
charms = { path = "../../charms" }
charms-data = { path = "../../charms/charms-data" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
http = "1.0"
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2.0.11"
rand = "0.8"
hex = "0.4"
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
